<resources>
    <string name="app_name">ChatExample</string>
    <string name="action_settings">Settings</string>

    !--Hints--!
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>

    !--Texts--!
    <string name="Title">Messaging App Example</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="reply">Reply</string>

    !--Error Messages--!
    <string name="error_characters">The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="error_email">The email address is badly formatted.</string>
    <string name="error_email_login">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_email_not_registered">Email not registered</string>
    <string name="error_password">The password is invalid or the user does not have a password.</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_loading_messages">Error Loading Messages</string>

    |--Button Texts--|
    <string name="select_photo">Select Photo</string>
    <string name="register">Register</string>

    !--Menu--!
    <string name="sign_out">Sign out</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="message">Message</string>
    <string name="text_a_lot_of_text">Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. Text, a lot of text. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>